@@ -60,6 +60,7 @@
 1,Crypto,crypto.html,crypto.src
 1,Java,java.html,java.src
 1,Windows.Forms,winforms.html,winforms.src
+1,XML Classes,xml-classes.html,xml-classes.src
 0,Class Status,class-status.html,class-status.src,cm/cormissing.css,cm/cormissing.js
 1,corlib,class-status-corlib.html,class-status-corlib.src,cm/cormissing.css,cm/cormissing.js
 1,System,class-status-System.html,class-status-System.src,cm/cormissing.css,cm/cormissing.js
