@@ -1,6 +1,12 @@
-﻿2004-01-11  Atsushi Enomoto <atsushi@ximian.com>
+2004-01-16  Atsushi Enomoto <atsushi@ximian.com>
+
+	* web/commands : Added xml-classes (forgot to commit).
+	* mono-build-w32.sh : Added icu support as well as glib.
+	* ChangeLog : tiny fix
+
+2004-01-11  Atsushi Enomoto <atsushi@ximian.com>
 
 	* xml-classes : added v2 info. schema status updates.
 
-	Added ChangeLog. (There are reason not to keep ChangeLog for 
+	Added ChangeLog. (There is no reason not to keep ChangeLog for 
 	documents, at least for not a little changes ;-)
